--- a/user-service/.env.example
+++ b/user-service/.env.example
@@ -12,6 +12,12 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 # Frontend URL (update this to your Railway frontend URL when deployed)
 FRONTEND_URL=https://your-frontend-url.railway.app
 
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_REGION=ap-south-1
+BUCKET_NAME=tymouttest
+
 # Service Configuration
 PORT=3001
 NODE_ENV=production
