--- a/message-service/package.json
+++ b/message-service/package.json
@@ -4,23 +4,16 @@
   "description": "Message service for Tymout application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "echo 'Skipping postinstall steps'"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.5.0",
-    "socket.io": "^4.7.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "express": "4.18.2",
+    "cors": "2.8.5",
+    "mongoose": "7.5.0",
+    "socket.io": "4.7.2",
+    "dotenv": "16.3.1"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
   }
 }
