--- a/event-service/package.json
+++ b/event-service/package.json
@@ -1,16 +1,13 @@
 {
   "name": "event-service",
   "version": "1.0.0",
-  "description": "Event service for Tymout application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
-    "bcryptjs": "^2.4.3",
+    "aws-sdk": "^2.1450.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -24,8 +21,5 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
   }
 }
