--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "api-gateway",
+  "name": "tymout-api-gateway",
   "version": "1.0.0",
+  "description": "API Gateway for Tymout microservices",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.1",
     "helmet": "^7.0.0",
     "http-proxy-middleware": "^2.0.6",
-    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
