--- a/api-gateway/railway.toml
+++ b/api-gateway/railway.toml
@@ -1,13 +1,13 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install"
+providers = ["nodejs"]
+buildCommand = "npm install --no-package-lock"
 
 [deploy]
 startCommand = "node server.js"
 healthcheckPath = "/health"
-healthcheckTimeout = 100
-restartPolicyType = "on-failure"
-restartPolicyMaxRetries = 10
+healthcheckTimeout = 300
+healthcheckInterval = 15
 
-[variables]
+[deploy.env]
 NODE_ENV = "production"
