--- a/api-gateway/railway.toml
+++ b/api-gateway/railway.toml
@@ -1,13 +1,10 @@
 [build]
 builder = "nixpacks"
 providers = ["nodejs"]
-buildCommand = "npm install --no-package-lock"
+buildCommand = "npm install"
 
 [deploy]
 startCommand = "node server.js"
-healthcheckPath = "/health"
-healthcheckTimeout = 600
-healthcheckInterval = 15
 
 [deploy.env]
 NODE_ENV = "production"
