--- a/api-gateway/railway.toml
+++ b/api-gateway/railway.toml
@@ -1,10 +1,13 @@
 [build]
 builder = "nixpacks"
 providers = ["nodejs"]
-buildCommand = "npm install"
+buildCommand = "npm install --no-package-lock"
 
 [deploy]
 startCommand = "node server.js"
+healthcheckPath = "/health"
+healthcheckTimeout = 300
+healthcheckInterval = 15
 
 [deploy.env]
 NODE_ENV = "production"
