--- a/user-service/railway.toml
+++ b/user-service/railway.toml
@@ -5,6 +5,9 @@ buildCommand = "npm install --no-package-lock"
 
 [deploy]
 startCommand = "node server.js"
+healthcheckPath = "/health"
+healthcheckTimeout = 300
+healthcheckInterval = 15
 
 [deploy.env]
 NODE_ENV = "production"
